--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             <div class="logo">
                 <img src="images/medlearnhublogo.jpeg" alt="MedlearnHub CPD Logo">
             </div>
+            <header>
+                <div >
+                    <input type="text" placeholder="What do you want to learn?" class="search-bar">
+                </div>
+            </header>
             <nav>
                 <ul>
                     <li><a href="#">All Courses</a></li>
@@ -39,21 +44,21 @@
         <p>Click the button below to see all courses</p>
         <div class="course-list">
             <div class="course-item">
-                <img src="images/featured-course1.jpg" alt="TOPIC 1">
+                <img src="images/TOPICS.jpeg" alt="TOPIC 1">
                 <h3>Topic (1 CPD credit)</h3>
                 <p>Definition, subtypes, presentation, and diagnosis of melanoma</p>
                 <span>Free</span>
                 <span>9 Lessons</span>
             </div>
             <div class="course-item">
-                <img src="images/featured-course2.jpg" alt="Topic 2">
+                <img src="images/TOPIC2.jpeg" alt="Topic 2">
                 <h3>topic 2 (1 CPD credit)</h3>
                 <p>The learner is to understand the definition, risk factors, diagnosis, management, and complications of cerebral palsy (CP)</p>
                 <span>Free</span>
                 <span>11 Lessons</span>
             </div>
             <div class="course-item">
-                <img src="images/featured-course3.jpg" alt="Topic 3">
+                <img src="images/TOPIC3.jpeg" alt="Topic 3">
                 <h3>topic 3 </h3>
                 <p>descreption of topic.</p>
                 <span>Free</span>
@@ -66,39 +71,39 @@
         <h2>Select Courses by Topic</h2>
         <div class="category-list">
             <div class="category-item">
-                <img src="images/course-category1.jpg" alt="All Courses">
+                <img src="images/medlearnlogo.jpeg" alt="All Courses">
                 <h3>All Courses</h3>
             </div>
             <div class="category-item">
-                <img src="images/course-category2.jpg" alt="Neurology">
+                <img src="images/NEURO.jpeg" alt="Neurology">
                 <h3>Business for the Healthcare Practitioner</h3>
             </div>
             <div class="category-item">
-                <img src="images/course-category3.jpg" alt="COVID-19">
+                <img src="images/COVID.jpeg" alt="COVID-19">
                 <h3>COVID-19</h3>
             </div>
             <div class="category-item">
-                <img src="images/course-category4.jpg" alt="HIV">
+                <img src="images/medlearn coverpage.jpeg" alt="HIV">
                 <h3>HIV</h3>
             </div>
             <div class="category-item">
-                <img src="images/course-category5.jpg" alt="Infections">
+                <img src="images/PNEUMONIA.jpeg" alt="Infections">
                 <h3>Infections</h3>
             </div>
             <div class="category-item">
-                <img src="images/course-category6.jpg" alt="Medicine and Primary Care">
+                <img src="images/medlearn coverpage.jpeg" alt="Medicine and Primary Care">
                 <h3>Medicine and Primary Care</h3>
             </div>
             <div class="category-item">
-                <img src="images/course-category7.jpg" alt="Ob-Gyn & Women's Health">
+                <img src="images/medlearn coverpage.jpeg" alt="Ob-Gyn & Women's Health">
                 <h3>Ob-Gyn & Women's Health</h3>
             </div>
             <div class="category-item">
-                <img src="images/course-category8.jpg" alt="Orthopaedics">
+                <img src="images/medlearn coverpage.jpeg" alt="Orthopaedics">
                 <h3>Orthopaedics</h3>
             </div>
             <div class="category-item">
-                <img src="images/course-category9.jpg" alt="Paediatrics">
+                <img src="images/medlearn coverpage.jpeg" alt="Paediatrics">
                 <h3>Paediatrics</h3>
             </div>
         </div>
