--- a/index.html
+++ b/index.html
@@ -45,22 +45,29 @@
         <div class="course-list">
             <div class="course-item">
                 <img src="images/TOPICS.jpeg" alt="TOPIC 1">
-                <h3>Topic (1 CPD credit)</h3>
-                <p>Definition, subtypes, presentation, and diagnosis of melanoma</p>
+                <h3>Hypertension (1 CPD credit)</h3>
+                <p>Definition, presentation, and diagnosis of Hypertension</p>
                 <span>Free</span>
                 <span>9 Lessons</span>
             </div>
             <div class="course-item">
                 <img src="images/TOPIC2.jpeg" alt="Topic 2">
-                <h3>topic 2 (1 CPD credit)</h3>
-                <p>The learner is to understand the definition, risk factors, diagnosis, management, and complications of cerebral palsy (CP)</p>
+                <h3>management of diabetes(1 CPD credit)</h3>
+                <p>The learner is to understand the definition, risk factors, diagnosis, management, and complications of diabetes</p>
                 <span>Free</span>
                 <span>11 Lessons</span>
             </div>
             <div class="course-item">
                 <img src="images/TOPIC3.jpeg" alt="Topic 3">
-                <h3>topic 3 </h3>
-                <p>descreption of topic.</p>
+                <h3>Asthma (2 CPD credit) </h3>
+                <p> Learn about the diagnosis, treatment, and long-term management of asthma.</p>
+                <span>Free</span>
+                <span>9 Lessons</span>
+            </div>
+            <div class="course-item">
+                <img src="images/PNEUMONIA.jpeg" alt="Topic 3">
+                <h3>Pneumonia (1 CPD credit) </h3>
+                <p>Definition, presentation, and diagnosis of Pneumonia.</p>
                 <span>Free</span>
                 <span>9 Lessons</span>
             </div>
